# Encryption

./: Encryption_database.py  LICENSE  README.md  User.db  User_database.py  app.py  database.py  email.py  email_sender.py  encryption_V2.py  encryption_testing.py  encrytion_V2.py  message_encrypted.db  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
ExponEncryption.egg-info/: PKG-INFO
Expon_Encryption/: LICENSE  README.md  setup.py
Expon_Encryption/ExponEncryption/: __init__.py  encryption_V2.py
Expon_Encryption/ExponEncryption.egg-info/: PKG-INFO
static/: home.js  home_event_script.js  index_event.js  loading_styles.css  script.js  setting.js  setup.js  styles.css  styles_home.css  testing.js  testing_styles.css
templates/: about.html  home.html  index.html  redirect.html  testing.html
tests/: test_Encryption.py
